    ~lsp-inlay-hint-enable~ instead of ~lsp-rust-analyzer-server-display-inlay-hints~ and
    ~lsp-javascript-server-display-inlay-hints~
  * Add ShaderLab support.
  * Remove custom variable ~lsp-inlay-hint-enum-format~ since LSP Specification 3.17 only has ~type~ and
    ~parameter~ hint kinds.
  * Add [[https://semgrep.dev][Semgrep]] support
** Release 8.0.0
  * Add ~lsp-clients-angular-node-get-prefix-command~ to get the Angular server from another location which is still has ~/lib/node_modules~ in it.
  * Set ~lsp-clients-angular-language-server-command~ after the first connection to speed up subsequent connections.
  * Add ~lsp-sql-execute-paragraph~ to execute the current paragraph (like ~sql-send-paragraph~).
  * Breaking change: bindings for commands under ~s~ (like ~lsp-workspace-shutdown~) were moved under ~w~ for better compatibility with =Spacemacs=
  * removed ~lsp-print-performance~
  * Add support for insert/replace when performing completion. When using
    ~company~ pressing ~C-u RET~ will perform the alternative action (the
    default is replace, but can be changed).
  * Add ~lsp-after-apply-edits-hook~ that run after every workspace edit is applied.
  * Safe renamed ~lsp-diagnose~ to ~lsp-doctor~.
  * Add ~lsp-modeline-code-actions-segments~ for a better customization.
  * Add [[https://github.com/sumneko/lua-language-server][Lua Language Server]], [[https://github.com/Alloyed/lua-lsp][Lua-LSP]] and improve EmmyLua.
  * Add configuration settings for elixir-ls.
  * Add Nix support.
  * Add Racket support.
  * Provided automatic installers for `lsp-clojure` (`clojure-lsp`).
  * Provided automatic installers for clangd.
  * Added ~lsp-modeline-workspace-status-mode~ and option to disable it via ~lsp-modeline-workspace-status-enable~.
  * Automatically download [[https://github.com/eclipse/lemminx][XML language server Lemminx]]
  * Add Vala support.
  * Add [[https://github.com/sorbet/sorbet][Sorbet Language Server]] for typechecking Ruby code.